Add a new cipher module "sun-ccm" which is an identical copy of ccm + ctr + blkcipher, just to avoid a bug in blkcipher.
It allows us to skip the heavy block-copy.

--- a/configure.ac
+++ b/configure.ac
@@ -52,6 +52,7 @@ AC_CONFIG_FILES([
 	module/Makefile
 	module/spl/Makefile
 	module/splat/Makefile
+	module/sun-ccm/Makefile
 	include/Makefile
 	scripts/Makefile
 	spl.spec
