spl-crypto rework.
Split sun-ctr out of sun-ccm to make own module,
Added sun-gcm cipher method (also uses sun-ctr).
Made ciphers to be configurable from commandline, and pick right cipher when
used.
Added testing (ensuring cipher exists) on creation, so it can fail cleanly
when sun-ccm module has not been loaded.
Added crypto_mac function, even though it has yet to be called.
Ensured keylen commandline changes work.

--- a/configure.ac
+++ b/configure.ac
@@ -52,7 +52,9 @@ AC_CONFIG_FILES([
 	module/Makefile
 	module/spl/Makefile
 	module/splat/Makefile
+	module/sun-ctr/Makefile
 	module/sun-ccm/Makefile
+	module/sun-gcm/Makefile
 	include/Makefile
 	scripts/Makefile
 	spl.spec
